--- a/LeeTeke.Microsoft.DependencyInjection.Extensions/LeeTeke.Microsoft.DependencyInjection.Extensions.csproj
+++ b/LeeTeke.Microsoft.DependencyInjection.Extensions/LeeTeke.Microsoft.DependencyInjection.Extensions.csproj
@@ -3,7 +3,25 @@
   <PropertyGroup>
     <TargetFrameworks>net8.0;net7.0;net6.0;netstandard2.0;netstandard2.1;net462</TargetFrameworks>
     <ImplicitUsings>disable</ImplicitUsings>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <Description>本项目为Microsoft.DependencyInjection 的扩展方法使用，主要用于注册。</Description>
+    <PackageProjectUrl>https://github.com/leeteke/LeeTeke.Microsoft.DependencyInjection.Extensions</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/leeteke/LeeTeke.Microsoft.DependencyInjection.Extensions</RepositoryUrl>
+    <PackageTags>ioc;</PackageTags>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
