完善支持多接口注册

--- a/LeeTeke.Microsoft.DependencyInjection.Extensions/LeeTeke.Microsoft.DependencyInjection.Extensions.csproj
+++ b/LeeTeke.Microsoft.DependencyInjection.Extensions/LeeTeke.Microsoft.DependencyInjection.Extensions.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net8.0;net7.0;net6.0;netstandard2.0;netstandard2.1;net462</TargetFrameworks>
+    <TargetFrameworks>net9.0;net8.0;net7.0;net6.0;netstandard2.0;netstandard2.1;net462;net472;net48</TargetFrameworks>
     <ImplicitUsings>disable</ImplicitUsings>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
@@ -10,6 +10,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/leeteke/LeeTeke.Microsoft.DependencyInjection.Extensions</RepositoryUrl>
     <PackageTags>ioc;</PackageTags>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
